fix extra margin

--- a/css/form.less
+++ b/css/form.less
@@ -165,7 +165,6 @@ form {
         width:auto;
         max-width:100%;
         margin-right:16px;
-        margin-bottom:@base-line-height /4*3;
 
         @media @smartphone {
             margin-right:0;
